fix(TextBanner): use spacing tokens

--- a/src/patterns/TextBanner/_textBanner.scss
+++ b/src/patterns/TextBanner/_textBanner.scss
@@ -5,10 +5,10 @@
     align-items: flex-start;
     display: flex;
     flex-direction: column;
-    gap: 24px;
+    gap: $spacing-md;
     justify-content: center;
     max-width: none;
-    padding: 32px 24px;
+    padding: $spacing-lg $spacing-md;
 
     h1 {
       white-space: nowrap;
